--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -2,6 +2,7 @@
     color: #757575;
     font-size: 20px;
     font-weight: 500;
+    padding: 10px;
 }
 .link:hover{
     transform: scale(1.02, 1.02);
