--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,4 +1,35 @@
-.menuImg{
-    width: 200px;
-    margin: 10px;
+.imgMenu{
+    width: 100%;
+    height: 250px;
+}
+.col{
+    height: 500px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.card{
+    padding: 10px;
+    box-shadow: 0 0 8px -4px  black;
+}
+.titleMenu{
+    height: 80px;
+    color: #868686;
+    text-align: center;
+}
+.publisher{
+    color: #868686;
+    text-align: right;
+}
+.basket {
+    width: 35px;
+}
+.heartMenu{
+    width: 100% !important;
+}
+.buttonMenu a{
+    color: #868686;
+}
+.buttonMenu a:hover{
+    color: #868686;
+    text-decoration: none;
 }
